# backend-side-online-store

./: .gitignore  README.md  asd.txt  commands.txt  pyproject.toml
quickstart/: admin.py  models.py  serializers.py  views.py
quickstart/migrations/: 0001_initial.py  0002_userdata_is_admin_alter_userdata_date_joined_and_more.py  0003_wishlist.py  0004_remove_wishlist_product_wishlist_product.py  0005_cart.py  0006_alter_product_category.py  0007_alter_cart_created_at_alter_cart_updated_at_and_more.py
tutorial/: settings.py  urls.py
